--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5.37rem;
 }
 
 .greetingDesktop {
@@ -62,7 +63,6 @@
   font-weight: 400;
   line-height: 170%; /* 1.7rem */
   width: 19.5rem;
-  margin-bottom: 5.37rem;
 }
 
 .learnMore {
@@ -114,8 +114,127 @@
   height: 2.4375rem;
 }
 
-@media screen and (min-width: 700px) {
-  .headshotContainer{
+@media screen and (min-width: 650px) {
+  .headshotContainer {
+    flex-direction: row-reverse;
+  }
+
+  .greetingContainer {
+    align-items: flex-start;
+    width: 24rem;
+    height: 23.3125rem;
+    justify-content: center;
+  }
+
+  .greetingDesktop {
+    display: block;
+    color: #353636;
+    text-align: left;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Khula;
+    font-size: 3.5rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 98.066%; /* 3.06456rem */
+  }
+
+  .greeting {
+    display: none;
+  }
+
+  .description {
+    text-align: left;
+    font-size: 2.2rem;
+  }
+
+  .descriptionChanging {
+    font-size: 2.2rem;
+  }
+
+  .bio {
+    text-align: left;
+    font-size: 1.1rem;
+    width: 24rem;
+    /* height: 5.1875rem; */
+    margin: 0em;
+  }
+
+  .circlePic {
+    height: 20em;
+    margin: 0em;
+  }
+
+  .learnMore {
+    font-size: 1.3rem;
+  }
+
+  .arrowDown {
+    width: 2rem;
+  }
+}
+
+@media screen and (min-width: 988px) {
+  .headshotContainer {
+    flex-direction: row-reverse;
+  }
+
+  .greetingContainer {
+    align-items: flex-start;
+    width: 31rem;
+    height: 23.3125rem;
+    justify-content: center;
+  }
+
+  .greetingDesktop {
+    display: block;
+    color: #353636;
+    text-align: left;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Khula;
+    font-size: 4.2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 98.066%; /* 3.06456rem */
+  }
+
+  .greeting {
+    display: none;
+  }
+
+  .description {
+    text-align: left;
+    font-size: 2.6rem;
+  }
+
+  .descriptionChanging {
+    font-size: 2.6rem;
+  }
+
+  .bio {
+    text-align: left;
+    font-size: 1.4rem;
+    width: 30rem;
+    /* height: 5.1875rem; */
+    margin: 0em;
+  }
+
+  .circlePic {
+    height: 25em;
+    margin: 0em;
+  }
+
+  .learnMore {
+    font-size: 1.3rem;
+  }
+
+  .arrowDown {
+    width: 2rem;
+  }
+}
+
+/* when greater than 1212 do this */
+@media screen and (min-width: 1212px) {
+  .headshotContainer {
     flex-direction: row-reverse;
   }
 
@@ -135,10 +254,9 @@
     font-style: normal;
     font-weight: 600;
     line-height: 98.066%; /* 3.06456rem */
-  
+
     width: 32.375rem;
     height: 11.75rem;
-  
   }
 
   .greeting {
@@ -149,7 +267,7 @@
     text-align: left;
     font-size: 3.3rem;
   }
-  
+
   .descriptionChanging {
     font-size: 3.3rem;
   }
@@ -171,5 +289,5 @@
 
   .arrowDown {
     width: 2rem;
-    }
+  }
 }
