--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -186,7 +186,8 @@
     font-size: 4.2rem;
   }
 
-  .description, .descriptionChanging {
+  .description,
+  .descriptionChanging {
     font-size: 2.6rem;
   }
 
@@ -217,7 +218,8 @@
     font-size: 5.5rem;
   }
 
-  .description, .descriptionChanging {
+  .description,
+  .descriptionChanging {
     font-size: 3.3rem;
   }
 
