--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -114,6 +114,29 @@
   height: 2.4375rem;
 }
 
+.expertiseTechContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  width: 17.75rem;
+
+  color: #353636;
+
+  font-family: Khula;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 169.945%; /* 1.91188rem */
+}
+
+.expertiseText {
+  text-align: center;
+}
+
+.techStackText {
+  text-align: center;
+}
+
 @media screen and (min-width: 665px) {
   .headshotContainer {
     flex-direction: row-reverse;
