--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -119,6 +119,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 5rem;
+  margin-bottom: 10rem; /* dummy value for now */
   width: 17.75rem;
   height: 38rem;
 
@@ -217,6 +218,31 @@
     width: 1.25rem;
     height: 1.1rem;
   }
+
+  .expertiseTechContainer {
+    flex-direction: row;
+    width: 38rem;
+    height: 27rem;
+  }
+
+  .expertiseText, .techStackText {
+    text-align: left;
+    font-size: 1.6rem;
+  }
+
+  .expertiseSplurge, .techStackSplurge {
+    font-size: 1.1rem;
+  }
+  
+  .expertiseContainer, .techStackContainer {
+    width: 18rem;
+  }
+
+  .techStackContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
 }
 
 @media screen and (min-width: 988px) {
@@ -284,5 +310,10 @@
 
   .arrowDown {
     width: 2rem;
+  }
+
+  .expertiseTechContainer {
+    width: 79.6875rem;
+    height: 38.1875rem;
   }
 }
