--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -119,7 +119,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 5rem;
-  margin-bottom: 10rem; /* dummy value for now */
+  margin-bottom: 2rem;
   width: 17.75rem;
   height: 38rem;
 
@@ -154,6 +154,23 @@
 
 .expertiseBraces,
 .techStackBraces {
+  background: linear-gradient(180deg, #956bff 0%, #74e6ff 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.contactContainer {
+  text-align: center;
+  font-family: Khula;
+  color: #353636;
+  font-size: 1.5625rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 169.945%; /* 2.65538rem */
+}
+
+.hashtag {
   background: linear-gradient(180deg, #956bff 0%, #74e6ff 100%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -225,16 +242,19 @@
     height: 27rem;
   }
 
-  .expertiseText, .techStackText {
+  .expertiseText,
+  .techStackText {
     text-align: left;
     font-size: 1.6rem;
   }
 
-  .expertiseSplurge, .techStackSplurge {
+  .expertiseSplurge,
+  .techStackSplurge {
     font-size: 1.1rem;
   }
-  
-  .expertiseContainer, .techStackContainer {
+
+  .expertiseContainer,
+  .techStackContainer {
     width: 18rem;
   }
 
@@ -285,15 +305,18 @@
     height: 24rem;
   }
 
-  .expertiseText, .techStackText {
+  .expertiseText,
+  .techStackText {
     font-size: 2rem;
   }
 
-  .expertiseSplurge, .techStackSplurge {
+  .expertiseSplurge,
+  .techStackSplurge {
     font-size: 1.3rem;
   }
-  
-  .expertiseContainer, .techStackContainer {
+
+  .expertiseContainer,
+  .techStackContainer {
     width: 24rem;
   }
 }
@@ -340,16 +363,19 @@
     height: 35rem;
   }
 
-  .expertiseText, .techStackText {
+  .expertiseText,
+  .techStackText {
     font-size: 3.125rem;
   }
 
-  .expertiseSplurge, .techStackSplurge {
+  .expertiseSplurge,
+  .techStackSplurge {
     font-size: 1.8rem;
     line-height: 140%;
   }
-  
-  .expertiseContainer, .techStackContainer {
+
+  .expertiseContainer,
+  .techStackContainer {
     width: 30rem;
   }
 }
