complete contacts section desktop view

--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -405,4 +405,16 @@
   .techStackContainer {
     width: 30rem;
   }
+
+  .contactContainer {
+    font-size: 2.3rem;
+  }
+
+  .contactButtons {
+    width: 12rem;
+  }
+  
+  .contactButtons img {
+    height: 2.3rem;
+  }
 }
