--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -349,6 +349,10 @@
 }
 
 @media screen and (min-width: 1212px) {
+  .bodyContainer {
+    margin-top: 3rem;
+  }
+  
   .greetingContainer {
     width: 37.625rem;
   }
