--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -188,6 +188,7 @@
   width: 9rem;
 }
 
+/* Small */
 @media screen and (min-width: 665px) {
   .headshotContainer {
     flex-direction: row-reverse;
@@ -280,6 +281,7 @@
   }
 }
 
+/* Medium */
 @media screen and (min-width: 988px) {
   .headshotContainer {
     margin-bottom: 4rem;
@@ -287,7 +289,7 @@
   }
 
   .greetingContainer {
-    width: 34rem;
+    width: 32rem;
   }
 
   .greetingDesktop {
@@ -349,14 +351,19 @@
   }
 }
 
+/* Large */
 @media screen and (min-width: 1212px) {
   .bodyContainer {
     margin-top: 3rem;
   }
+
+  .headshotContainer {
+    width: 80%;
+    justify-content: space-around;
+  }
   
   .greetingContainer {
-    width: 30rem;
-    /* background-color: red; */
+    width: 40rem;
   }
 
   .greetingDesktop {
