complete mobile navbar ui

--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -1,17 +1,62 @@
+.navbarContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 1.5rem;
+}
+
 .navlinks.open {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .navlinks {
+  position: absolute;
+  width: 100%;
   display: none;
+  background-color: white;
+  color: #353636;
+  text-align: center;
+  font-family: Khula;
+  font-size: 1.625rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 169.945%; /* 2.76163rem */
+}
+
+.navlinks li {
+  padding-top: 0.5rem;
+  padding-bottom: 0.1rem;
+  border-bottom: 1px solid pink;
+  border: 10px solid;
+  border-image-slice: 1;
+  border-width: 0.1rem;
+  width: 16.6875rem;
+  /* height: 0.0625rem; */
+  border-image-source: linear-gradient(
+    90deg,
+    rgba(149, 107, 255, 0.45) 0%,
+    rgba(116, 230, 255, 0.45) 100%
+  );
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+}
+
+.navlinks li:nth-child(4) {
+  border-bottom: none;
 }
 
 @media screen and (min-width: 988px) {
-    .hamburger {
-        display: none;
-    }
+  .hamburger {
+    display: none;
+  }
 
-    .navlinks {
-        display: block;
-    }
+  .navlinks {
+    display: block;
+  }
 }
