--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -1,10 +1,12 @@
 .navbarContainer {
+  position: relative;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 1.5rem;
+
+  padding-top: 1.5rem;
+  z-index: 2;
 }
 
 .navlinks.open {
@@ -26,6 +28,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: 169.945%; /* 2.76163rem */
+  z-index: 2;
 }
 
 .navlinks li {
@@ -47,6 +50,22 @@
   border-bottom: none;
 }
 
+.blurredBackground {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  bottom: 0px;
+  left: 0px;
+}
+
+.blurredBackground.appear {
+  display: block;
+  z-index: 1;
+  background: linear-gradient(0deg, rgba(53, 54, 54, 0.60) 0%, rgba(53, 54, 54, 0.00) 65.09%);
+  backdrop-filter: blur(4px);
+}
+
 @media screen and (min-width: 988px) {
   .hamburger {
     display: none;
@@ -54,5 +73,9 @@
 
   .navlinks {
     display: block;
+  }
+
+  .blurredBackground, .blurredBackground.appear {
+    display: none;
   }
 }
