add slide down transition to mobile navbar

--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -4,9 +4,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
 
   padding-top: 1.5rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 .homeButton {
@@ -30,16 +31,22 @@
 }
 
 .navlinks.open {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  visibility: visible;
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+  -webkit-transition: -webkit-transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
 }
 
 .navlinks {
   position: absolute;
   width: 100%;
   display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   background-color: white;
   color: #353636;
   text-align: center;
@@ -50,8 +57,16 @@
   line-height: 169.945%; /* 2.76163rem */
   z-index: 2;
 
+  margin-top: -0.1rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+
+  visibility: hidden;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  -webkit-transition: -webkit-transform 0.4s ease-in-out, visibility 0s 0.4s;
+  transition: transform 0.4s ease-in-out, visibility 0s 0.4s;
+
 }
 
 .navlinks li {
