--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -1,13 +1,21 @@
 .navbarContainer {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  z-index: 3;
+}
+
+.navbarIcons {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 4;
   background-color: white;
-
   padding-top: 1.5rem;
-  z-index: 3;
 }
 
 .homeButton {
@@ -39,13 +47,14 @@
 }
 
 .navlinks {
-  position: absolute;
+  position: fixed;
   width: 100%;
-  display: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  left: 0px;
+  top: 4.87rem;
 
   background-color: white;
   color: #353636;
@@ -66,7 +75,6 @@
   transform: translateY(-100%);
   -webkit-transition: -webkit-transform 0.4s ease-in-out, visibility 0s 0.4s;
   transition: transform 0.4s ease-in-out, visibility 0s 0.4s;
-
 }
 
 .navlinks li {
@@ -76,7 +84,6 @@
   border-image-slice: 1;
   border-width: 0.1rem;
   width: 16.6875rem;
-  /* height: 0.0625rem; */
   border-image-source: linear-gradient(
     90deg,
     rgba(149, 107, 255, 0.45) 0%,
@@ -100,7 +107,11 @@
 .blurredBackground.appear {
   display: block;
   z-index: 1;
-  background: linear-gradient(0deg, rgba(53, 54, 54, 0.60) 0%, rgba(53, 54, 54, 0.00) 65.09%);
+  background: linear-gradient(
+    0deg,
+    rgba(53, 54, 54, 0.6) 0%,
+    rgba(53, 54, 54, 0) 65.09%
+  );
   backdrop-filter: blur(4px);
 }
 
@@ -108,7 +119,7 @@
   .homeButton {
     margin-left: 5rem;
   }
-  
+
   .hamburger {
     margin-right: 5rem;
   }
@@ -119,11 +130,53 @@
     display: none;
   }
 
-  .navlinks {
-    display: block;
+  .navbarContainer {
+    flex-direction: row;
+    margin: 2rem;
+    align-items: center;
   }
 
-  .blurredBackground, .blurredBackground.appear {
+  .navbarIcons {
+    width: auto;
+    padding-top: 0rem;
+    border: 1px
+  }
+
+  .homeButton {
+    height: 5rem;
+  }
+
+  .navlinksContainer {
+    width: 45%;
+    margin-right: 5rem;
+  }
+
+  .navlinks {
+    visibility: visible;
+    -webkit-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transition: -webkit-transform 0s;
+    transition: transform 0s;
+    position: static;
+    background-color: transparent;
+
+    flex-direction: row;
+    justify-content: space-between;
+    color: #353636;
+    font-family: Khula;
+    font-size: 1.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 169.945%; /* 3.1865rem */
+  }
+
+  .navlinks li {
+    border: none;
+    width: auto;
+  }
+
+  .blurredBackground,
+  .blurredBackground.appear {
     display: none;
   }
 }
