--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -180,3 +180,17 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 1212px) {
+  .navlinksContainer {
+    width: 45%;
+  }
+
+  .navlinks {
+    font-size: 1.5rem;
+  }
+
+  .homeButton {
+    height: 3.5rem;
+  }
+}
