--- a/src/ExperienceCard.module.css
+++ b/src/ExperienceCard.module.css
@@ -6,17 +6,49 @@
 
   overflow: hidden;
   margin: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 
   transition: 0.4s ease-in-out;
+
+  color: #353636;
+  font-family: Khula;
 }
 
 .roleTitleContainer {
   display: flex;
   justify-content: space-between;
+  margin: 0.5rem;
 }
 
-.companyContainer {
+.companyInfoContainer {
   display: flex;
+  align-items: center;
+}
+
+.companyLogoContainer {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.companyLogo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.companyInfoContainer h2 {
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 600;
+  margin-left: 0.5rem;
+}
+
+.plusSign,
+.minusSign {
+  width: 2rem;
 }
 
 .plusSign.noShow {
