--- a/src/ExperienceCard.module.css
+++ b/src/ExperienceCard.module.css
@@ -73,7 +73,7 @@
 .contentContainer {
   margin-right: 1rem;
   margin-left: 1rem;
-  margin-top: 0.5rem;
+  margin-top: 0.7rem;
 }
 
 .subheadingContainer {
@@ -86,4 +86,10 @@
 
 .descriptionContainer {
   font-size: 0.7rem;
+  line-height: 140%; /* 2.76163rem */
+}
+
+.tagsContainer {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
