--- a/src/ExperienceCard.module.css
+++ b/src/ExperienceCard.module.css
@@ -1,7 +1,7 @@
 .experienceCardContainer {
   background: linear-gradient(white, white) padding-box,
     linear-gradient(to right, #956bff 0%, #74e6ff 100%) border-box;
-  border: 5px solid transparent;
+  border: 3px solid transparent;
   border-radius: 1rem;
 
   overflow: hidden;
@@ -25,7 +25,7 @@
 }
 
 .experienceCardContainer {
-  height: 3.4rem;
+  height: 2.9rem;
 }
 
 .companyInfoContainer {
@@ -34,8 +34,8 @@
 }
 
 .companyLogoContainer {
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -47,15 +47,16 @@
 }
 
 .companyInfoContainer h2 {
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 600;
   margin-left: 0.5rem;
+  margin-top: 0.2rem;
 }
 
 .plusSign,
 .minusSign {
-  width: 2rem;
+  width: 1.5rem;
 }
 
 .plusSign.noShow {
