--- a/src/ExperienceCard.module.css
+++ b/src/ExperienceCard.module.css
@@ -7,6 +7,7 @@
   overflow: hidden;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  height: 2.9rem;
 
   transition: 0.4s ease-in-out;
 
@@ -21,10 +22,6 @@
   margin-left: 0.5rem;
   margin-top: 0.2rem;
   margin-bottom: 0.2rem;
-}
-
-.experienceCardContainer {
-  height: 2.9rem;
 }
 
 .companyInfoContainer {
@@ -92,4 +89,40 @@
 .tagsContainer {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+@media screen and (min-width: 665px) {
+  .experienceCardContainer {
+    height: 4rem;
+  }
+
+  .roleTitleContainer {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+
+  .companyLogoContainer {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .companyInfoContainer h2 {
+    font-size: 1.4rem;
+  }
+
+  .contentContainer {
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+  }
+
+  .subheadingContainer {
+    font-size: 1.1rem;
+  }
+
+  .descriptionContainer {
+    font-size: 0.9rem;
+  }
 }
