--- a/src/Experience.module.css
+++ b/src/Experience.module.css
@@ -30,3 +30,15 @@
     font-size: 2rem;
   }
 }
+
+/* Medium */
+@media screen and (min-width: 988px) {
+  .experienceContainer {
+    margin-right: 6rem;
+    margin-left: 6rem;
+  }
+
+  .titleContainer {
+    font-size: 2.3rem;
+  }
+}
