--- a/src/Experience.module.css
+++ b/src/Experience.module.css
@@ -42,3 +42,13 @@
     font-size: 2.3rem;
   }
 }
+
+/* Large */
+@media screen and (min-width: 1212px) {
+  .experienceContainer {
+    margin-top: 3rem;
+  }
+  .titleContainer {
+    font-size: 2.5rem;
+  }
+}
