adjust margins of content for larger desktop view

--- a/src/Experience.module.css
+++ b/src/Experience.module.css
@@ -52,3 +52,11 @@
     font-size: 2.5rem;
   }
 }
+
+/* Larger */
+@media screen and (min-width: 1500px) {
+  .experienceContainer {
+    margin-right: 9rem;
+    margin-left: 9rem;
+  }
+}
